Create folder to organize page structure

--- a/pageWebSite/index.html
+++ b/pageWebSite/index.html
@@ -11,6 +11,21 @@
 <!DOCTYPE hmtl>
 <html>
     <head>
-        <title></title>
+        <title>Juan David Garzón</title>
+        <link rel="stylesheet" href="./style.css"/>
+        <script src="./script.js"></script>
     </head>
+    <body>
+        <!-- Navigation Bar -->
+        <nav>
+            <div id="home">
+                <div class="contact_name">
+                    Juan David Garzón
+                    <div class="contact_info">
+                        <img src="">
+                    </div>
+                </div>
+            </div>
+        </nav>
+    </body>
 </html>
