feat: add images for interaction in the described skills

--- a/pageWebSite/index.html
+++ b/pageWebSite/index.html
@@ -11,7 +11,7 @@
 <!DOCTYPE hmtl>
 <html>
     <head>
-        <title>Juan David Garzón</title>
+        <title>Juan David</title>
         <link rel="stylesheet" href="./style.css"/>
         <script src="./script.js"></script>
     </head>
@@ -20,12 +20,63 @@
         <nav>
             <div id="home">
                 <div class="contact_name">
-                    Juan David Garzón
+                    Juan David
                     <div class="contact_info">
-                        <img src="">
+                        <img src="html_images/envelope.png" alt="https://icons8.com/icon/124377/circled-envelope">
+                        juan.IBM@practice.com
                     </div>
+                    <div style="clear:both;"></div>
+                    <div class="contact_info">
+                        <img src="html_images/phone.png" alt="https://icons8.com/icons/set/phone">
+                        +3584486894
+
+                    </div>
+                </div>
+                <div class="topdiv">
+                    <a class="topmenu" href="#about-me">About Me</a>
+                    <!-- Add the links for Skills, Projects and Recommendation here -->
+                    
                 </div>
             </div>
         </nav>
+
+        <!-- About Me -->
+        <section id="about-me" class="container">
+            <div>
+                <img src="https://miro.medium.com/max/1400/1*qdAW1TjCN57h1lbuuzvchg.gif" class="profile_image"/>
+            </div>
+
+            <div>
+                <h1>
+                    Hi, I'm Juan David! <img src="html_finalprojimages/waving-hand.png" width="60px"/>
+                </h1>
+                <p>
+                    I am a Java developer Spring boot, perfecting my knowledge,
+                    currently studying FullStack at IBM.
+                </p>
+            </div>
+        </section>
+
+        <!--- Skills -->
+        <section id="skills">
+            <h2>Skills</h2>
+            <div style="clear:both;"></div>
+
+            <div class="all_skills">
+                <div class="skill">
+                    <img src="html_images/html5-48.png"/>
+                    <h6>HTML</h6>
+                    <p>.5 years experience</p>
+                </div>
+                
+                <div class="skill">
+                    <img src="html_images/javascript-48.png">
+                    <h6>JavaScript</h6>
+                    <p>.5 years experience</p>
+                </div>
+
+                <!-- Add more skills here -->
+            </div>
+        </section>
     </body>
 </html>
