fix: Fixed misspelled index tags and missing CSS in about me, with spelling errors

--- a/pageWebSite/index.html
+++ b/pageWebSite/index.html
@@ -8,7 +8,7 @@
 <!-- 7.Se añaden nuevas recomendaciones a la lista existente de recomendaciones-1P -->
 <!-- 8.El ícono de "Home" aparece como se especificó-1P -->
 <!-- 9.Al enviar una recomendación, aparece un mensaje emergente con un diálogo de confirmación-2P -->
-<!DOCTYPE hmtl>
+<!DOCTYPE html>
 <html>
     <head>
         <title>Juan David</title>
@@ -19,7 +19,7 @@
         <!-- Navigation Bar -->
         <nav>
             <div id="home">
-                <div class="contact_name">
+                <div class="profile_name">
                     Juan David
                     <div class="contact_info">
                         <img src="html_images/envelope.png" alt="https://icons8.com/icon/124377/circled-envelope">
