feat: add image of a waving hand

--- a/pageWebSite/index.html
+++ b/pageWebSite/index.html
@@ -48,7 +48,7 @@
 
             <div>
                 <h1>
-                    Hi, I'm Juan David! <img src="html_finalprojimages/waving-hand.png" width="60px"/>
+                    Hi, I'm Juan David! <img src="html_images/waving-hand.png" width="60px"/>
                 </h1>
                 <p>
                     I am a Java developer Spring boot, perfecting my knowledge,
