refactor: I add personal data to define the page, and the menu options in the header are also added to the body with their style.

--- a/pageWebSite/index.html
+++ b/pageWebSite/index.html
@@ -1,13 +1,3 @@
-<!-- Crear portafolio de una sola pagina que tenga las siguientes secciones: Sobre mi, Habilidades, Proyectos, Recomendaciones -->
-<!-- 1.El nombre estilizado aparece en la parte superior izquierda de la pagina-3P. -->
-<!-- 2.La barra de navegacion tiene 4 opciones(Acerca de, habilidades, proyectos ye recomendaciones). Al pasar el mouse, la fuente y el estilo del texto cambian y el texto se subraya-3P. -->
-<!-- 3.La seccion "Acerca de mi" tiene una imagen de perfitl unica, nombre y texto que refleja un resumen del perfil de los aprendices-3P -->
-<!-- 4.Las habilidades añadidas por el aprendiz aparecen, con logo y texto en el formato especificado-3P -->
-<!-- 5.Los 3 proyectos son diferentes de los predeterminados dados en el codigo de muestra y estan en el formato especificado-3P -->
-<!-- 6.Las 3 recomendaciones son diferentes de las predeterminadas dadas en el codigo de muestra y estan en el formato especificado-3P -->
-<!-- 7.Se añaden nuevas recomendaciones a la lista existente de recomendaciones-1P -->
-<!-- 8.El ícono de "Home" aparece como se especificó-1P -->
-<!-- 9.Al enviar una recomendación, aparece un mensaje emergente con un diálogo de confirmación-2P -->
 <!DOCTYPE html>
 <html>
     <head>
@@ -20,7 +10,7 @@
         <nav>
             <div id="home">
                 <div class="profile_name">
-                    Juan David
+                    Juan David Garzón
                     <div class="contact_info">
                         <img src="html_images/envelope.png" alt="https://icons8.com/icon/124377/circled-envelope">
                         juan.IBM@practice.com
@@ -34,7 +24,9 @@
                 </div>
                 <div class="topdiv">
                     <a class="topmenu" href="#about-me">About Me</a>
-                    <!-- Add the links for Skills, Projects and Recommendation here -->
+                    <a class="topmenu" href="#skills">Skills</a>
+                    <a class="topmenu" href="#projects">Projects</a>
+                    <a class="topmenu" href="#recommendations">Recommendations</a>
                     
                 </div>
             </div>
