--- a/pageWebSite/index.html
+++ b/pageWebSite/index.html
@@ -35,7 +35,7 @@
         <!-- About Me -->
         <section id="about-me" class="container">
             <div>
-                <img src="https://miro.medium.com/max/1400/1*qdAW1TjCN57h1lbuuzvchg.gif" class="profile_image"/>
+                <img src="html_images/Dev.png" class="profile_image"/>
             </div>
 
             <div>
@@ -43,8 +43,10 @@
                     Hi, I'm Juan David! <img src="html_images/waving-hand.png" width="60px"/>
                 </h1>
                 <p>
-                    I am a Java developer Spring boot, perfecting my knowledge,
-                    currently studying FullStack at IBM.
+                    I'm  a fifth-semester software engineering student at Politecnico Gran Colombiano.
+                    I'm a Java programmer currently perfecting my backend with Spring Boot and have six months of experience.
+                    I'm starting out in the frontend with JavaScript, HTML, and CSS.
+                    I've been studying IBM FullStack for the past two months.
                 </p>
             </div>
         </section>
