refactor: Images of the skills to be displayed are added and added to their labels.

--- a/pageWebSite/index.html
+++ b/pageWebSite/index.html
@@ -58,15 +58,51 @@
 
             <div class="all_skills">
                 <div class="skill">
-                    <img src="html_images/html5-48.png"/>
-                    <h6>HTML</h6>
+                    <img src="html_images/Java-48.png">
+                    <h6>Java</h6>
+                    <p>1 year experience</p>
+                </div>
+
+                <div class="skill">
+                    <img src="html_images/Spring-boot-48.png">
+                    <h6>Spring Boot</h6>
                     <p>.5 years experience</p>
                 </div>
-                
+
                 <div class="skill">
                     <img src="html_images/javascript-48.png">
                     <h6>JavaScript</h6>
-                    <p>.5 years experience</p>
+                    <p>.2 years experience</p>
+                </div>
+
+                <div class="skill">
+                    <img src="html_images/html5-48.png"/>
+                    <h6>HTML</h6>
+                    <p>.2 years experience</p>
+                </div>
+
+                <div class="skill">
+                    <img src="html_images/Css-40.png">
+                    <h6>CSS</h6>
+                    <p>.2 years experience</p>
+                </div>
+
+                <div class="skill">
+                    <img src="html_images/Sql-50.png">
+                    <h6>SQL</h6>
+                    <p>.5 year experience</p>
+                </div>
+
+                <div class="skill">
+                    <img src="html_images/Mysql-logo-48.png">
+                    <h6>MySQL</h6>
+                    <p>.5 year experience</p>
+                </div>
+
+                <div class="skill">
+                    <img src="html_images/Docker-24.png">
+                    <h6>Docker</h6>
+                    <p>.5 year experience</p>
                 </div>
 
                 <!-- Add more skills here -->
