refactor: I add example recommendations to achieve a visualization and presentation of the work.

--- a/pageWebSite/index.html
+++ b/pageWebSite/index.html
@@ -150,26 +150,25 @@
             <div class="all_recommendations" id="all_recommendations">
                 <div class="recommendation">
                     <span>&#8220;</span>
-                    Jane is a very quick learner and quickly grasps key concepts of web development.
-                    She got a great attibute & she is an excellent team player.
-                    She has a curious mind and asks the right question.
-                    She takes initiative within a team and has potentials to lead the team.
+                    Juan is very responsible with his work, diligent in carrying out an activity, organized, and an excellent companion.
+                    He takes the lead in developing a problem or in developing business logic.
+                    Maintaining teamwork with good communication and feedback on activities carried out.
                     <span>&#8221;</span>
                 </div>
 
                 <div class="recommendation">
                     <span>&#8220;</span>
-                    Working with Jane has been an awesome experience.
-                    She is highly knowledgable and always goes the extra step to make sure everything is right.
-                    For any future projects that need her expertise. I would definitely want to work with her again.
+                    My colleague Juan likes to explain the problems presented; it's a great learning experience while working.
+                    All this is thanks to methodologies such as UML diagrams and ER diagrams for connecting tables in a database.
+                    It's nice to be with him on work teams.
                     <span>&#8221;</span>
                 </div>
 
                 <div class="recommendation">
                     <span>&#8220;</span>
-                    I had  worked along with Jane the initial phase of our venture witch needed web development.
-                    She is a committed resource who has in depth knowledge about the domain.
-                    She will be an asset for any organisation!
+                    Sharing tiem with Juan at the university has provided a wealth of knowledge.
+                    He never tires of learning, he likes to explore things he has no idea about.
+                    He likes learning processes, processes that can be generated automatically to save time.
                     <span>&#8221;</span>
                 </div>
             </div>
