--- a/pageWebSite/index.html
+++ b/pageWebSite/index.html
@@ -199,7 +199,7 @@
 
         <div class="popup" id="popup" class="flex_center">
             <img src="html_images/checkmark--outline.svg"/>
-            <h3><!-- Add appropriate text here --></h3>
+            <h3>Thanks for leaving a recommendation!</h3>
             <button onclick="showPopup(false)">Ok</button>
         </div>
     </body>
